fixed zoom distort

--- a/app/style.css
+++ b/app/style.css
@@ -36,7 +36,7 @@ body{
 
 img{
     width: auto;
-    height: 100% !important;
+    height: auto;
 }
 
 .image{
